Tue Sep 12 17:48:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Quartztest compiles and works.  (Passing is not yet likely, though)

Tue Sep 12 17:45:40 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* term_exists() methods in each backend now assert that the termname
	  passed in is not of zero length.  The API should throw exceptions
	  before a null term gets down to this level (though currently the
	  post and position iterators don't do this...).

Tue Sep 12 17:33:01 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Implemented OmIndexerNode::set_config_string() and added
	  OmIndexer::set_node_config() to make it useful.

Tue Sep 12 17:12:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The Java bindings now seem to work again, although the automatic
	  apitest converter doesn't.

Tue Sep 12 16:36:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Removed final bits of Berkeley DB from Quartz, and conditional
	  compile around header files (which was for includetest's benefit).

	* Added yet more classes to Quartz.  Still doesn't do anything.

Tue Sep 12 16:32:30 BST 2000 Olly Betts

	* Added reference counting to an instantiation of SleepycatTermList
	  which I'd missed.
 
Tue Sep 12 15:23:09 BST 2000 Olly Betts

	* Oops, AndMaybePostList didn't compile...

Tue Sep 12 14:44:26 BST 2000 Olly Betts

	* Fixed problem with OrPostList decomposing into AndMaybePostList at
	  the very start (only happens with a percentage cut-off threshold).

Tue Sep 12 14:15:13 BST 2000 Olly Betts

	* includetest.cc now depends on findheaders.pl.

	* findheaders.pl now copes with wrapped lines in Makefile.in (cvs
	  automake leaves them wrapped - last release version unwrapped them).
	
Tue Sep 12 12:35:49 BST 2000 Olly Betts

	* *PostList and *TermList now keep a reference to their parent database
	  so they'll continue to work if all other references to the database
	  die (tested by termlist3).
